<resources>
    <string name="app_name">Pubs Finder</string>
    <string name="screen_new_pub">New pub</string>
    <string name="screen_edit_pub">Edit pub</string>
    <string name="section_about">About the pub</string>
    <string name="section_location">Location</string>
    <string name="section_amenities">Amenities</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_venue_type">Venue type</string>
    <string name="hint_title_input">e.g. The Brazen Head</string>
    <string name="hint_description_input">What makes this place worth a visit?</string>
    <string name="hint_latitude_input">53.3448</string>
    <string name="hint_longitude_input">-6.2765</string>
    <string name="hint_coordinate_ranges">Latitude between -90 and 90, longitude between -180 and 180.</string>
    <string name="empty_list_state_text">No pubs yet. Tap Add pub to save your first one.</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add_pub">Add pub</string>
    <string name="button_save_pub">Save pub</string>
    <string name="button_save_changes">Save changes</string>
    <string name="button_delete">Delete</string>
    <string name="error_title_required">Title is required.</string>
    <string name="error_latitude_range">Enter a number between -90 and 90.</string>
    <string name="error_longitude_range">Enter a number between -180 and 180.</string>
    <string name="action_delete">Delete pub</string>
    <string name="action_share">Share pub</string>
    <string name="dialog_delete_title">Delete pub?</string>
    <string name="dialog_delete_message">%1$s will be permanently deleted.</string>
    <string name="share_chooser_title">Share pub via</string>
    <string name="format_share_text">%1$s\n%2$s\n%3$s\nhttps://maps.google.com/?q=%4$s,%5$s</string>
    <string name="venue_type_pub">Pub</string>
    <string name="venue_type_bar">Bar</string>
    <string name="venue_type_sports_bar">Sports bar</string>
    <string name="venue_type_craft_beer_bar">Craft beer bar</string>
    <string name="venue_type_cocktail_bar">Cocktail bar</string>
    <string name="amenity_live_music">Live music</string>
    <string name="amenity_beer_garden">Beer garden</string>
    <string name="amenity_food_served">Food served</string>
    <string name="amenity_sports_on_tv">Sports on TV</string>
    <string name="amenity_wheelchair_accessible">Wheelchair accessible</string>
    <string name="amenity_pet_friendly">Pet friendly</string>
    <string name="separator_amenities">" · "</string>
    <string name="format_coordinates">%1$.4f° %2$s, %3$.4f° %4$s</string>
    <string name="direction_north">N</string>
    <string name="direction_south">S</string>
    <string name="direction_east">E</string>
    <string name="direction_west">W</string>
</resources>